// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem A default ListItem, should be an li 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  margin-bottom: 0.25rem;
}

<li
  className="c0"
>
  🥑
</li>
`;

exports[`ListItem handles mouseenter 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  margin-bottom: 0.25rem;
}

<li
  className="c0"
  onMouseEnter={[Function]}
>
  🐭
</li>
`;
